--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63bba0">  <td>25/06/05 14:11:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonDropdownSelectBased.testDropdown()[pri:0, instance:com.dropdownAutomation.AmazonDropdownSelectBased@1ea9f6af]">testDropdown</td> 
-  <td>main@331994761</td>   <td></td> </tr>
+<tr bgcolor="63bba0">  <td>25/06/09 13:07:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RedBusBootstrapDropdown.testDropdown()[pri:0, instance:com.dropdownAutomation.RedBusBootstrapDropdown@188715b5]">testDropdown</td> 
+  <td>main@678433396</td>   <td></td> </tr>
 </table>
